# Project-FAASPE

./: .gitattributes  .gitignore  README.md
faaspe/: .gitignore  README.md  fabfile.py  nodes.example
faaspe/docs/: revision_experiments.md
faaspe/functions/auth/: handler.py
faaspe/functions/calc-avg/: handler.py
faaspe/functions/compute-emulate/: handler.py
faaspe/functions/data-size/: Dockerfile  handler.py
faaspe/functions/file-replicator/: handler.py
faaspe/functions/hello-world/: Dockerfile  handler.py
faaspe/functions/image/: handler.py
faaspe/functions/jkv-bench/: handler.py  requirements.txt
faaspe/functions/jkv-client/: Dockerfile  handler.py  jkv_pb2.py  jkv_pb2_grpc.py  requirements.txt
faaspe/functions/k-hop/: handler.py
faaspe/functions/list-traversal/: handler.py
faaspe/functions/list-traversal-trace/: handler.py
faaspe/functions/ml-serving/: func_requirements.txt  handler.py  init_hack.sh
faaspe/functions/storage-load-trace/: handler.py
faaspe/functions/user-follow/: handler.py
faaspe/functions/video/: handler.py
faaspe/functions/ycsb/: handler.py
faaspe/functions/ycsb-example/: handler.py
faaspe/functions/ycsb-t/: handler.py
faaspe/lib/: Dockerfile  arbiter.py  bench_util.py  benchmark.py  invocation_log.py  jkv_client.py  jkv_pb2.py  kayak.py  profiler.py  requirements.txt
faaspe/platform/: cli.py  function.py
faaspe/results/: ycsb.csv
faaspe/results/auth-remote/: auth.csv
faaspe/results/calc-avg-remote/: calc-avg.csv
faaspe/results/compute-emulate-remote/: compute-emulate-sleep.csv  compute-emulate.csv
faaspe/results/data-size-remote/: data-size-update-large.csv  data-size.csv
faaspe/results/file-replicator-remote/: file-replicator.csv
faaspe/results/image-remote/: image-archive.csv  image.csv
faaspe/results/k-hop-remote/: k-hop.csv
faaspe/results/list-traversal-remote/: list-traversal.csv
faaspe/results/list-traversal-trace-remote/: list-traversal-trace.csv  list-traversal-tracedetailed.csv
faaspe/results/ml-serving-remote/: ml-serving-archive.csv  ml-serving.csv
faaspe/results/storage-load-trace-remote/: storage-load-trace.csv  storage-load-tracedetailed.csv
faaspe/results/user-follow-remote/: user-follow.csv
faaspe/results/video-remote/: video-archive.csv  video.csv
faaspe/results/ycsb-remote/: ycsb.csv
faaspe/results/ycsb-t-remote/: ycsb-t.csv
faaspe/scripts/: cloudlab_init.py  cloudlab_revision_full.py  cloudlab_revision_smoke.py  docker_init.sh  init.sh  param_parser.py  parse_invocation_log.py  profile_access_latency.py  render_isolation_table.py  revision_experiments.py  run_isolation_bench.py  runner.py  summarize_revision_results.py
faaspe/scripts/batch/: run_app.py  run_compute_emulate.py  run_data_size.py  run_heavy_app.py  run_list_traversal.py  run_storage_load.py  run_trace.py  run_ycsb.py  run_ycsbt.py
faaspe/tests/: test_avg.py  test_imresize.py  test_mlinf.py  test_platform.py  test_sleep.py  test_video.py
jkv/: .gitignore  CMakeLists.txt  Makefile  README.md
jkv/config/: config.example
jkv/docker/: func-worker.Dockerfile
jkv/proto/: jkv.proto
jkv/pyclient/: client.py
jkv/scripts/: build_func_worker_container.sh  combine_files.py  run_func_worker_container.sh
jkv/src/: main.cpp
jkv/src/cache/: cache.cpp  cache.h  main.cpp  occ_cache.cpp  occ_cache.h
jkv/src/client/: kv_client.cpp  kv_client.h  zmq_pingpong.cpp
jkv/src/communication/: zmq_server.cpp  zmq_server.h
jkv/src/store/: abskvs.h  func_worker_main.cpp  function_runner.cpp  function_runner.h  kvstore.cpp  kvstore.h  occkvs.cpp  occkvs.h
jkv/src/util/: common.hpp  config.hpp  zmq_util.cpp  zmq_util.hpp
